--- a/bin/addons/base/i18n/kk.po
+++ b/bin/addons/base/i18n/kk.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-server\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-10-06 11:45+0000\n"
+"PO-Revision-Date: 2011-10-07 08:49+0000\n"
 "Last-Translator: arruah <Unknown>\n"
 "Language-Team: Kazakh <kk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-07 05:04+0000\n"
-"X-Generator: Launchpad (build 14085)\n"
+"X-Launchpad-Export-Date: 2011-10-08 05:42+0000\n"
+"X-Generator: Launchpad (build 14110)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -6786,12 +6786,12 @@ msgstr ""
 #: view:res.users:0
 #: field:res.widget.user,user_id:0
 msgid "User"
-msgstr ""
+msgstr "Паайдаланушы"
 
 #. module: base
 #: model:res.country,name:base.pr
 msgid "Puerto Rico"
-msgstr ""
+msgstr "Пуэрто-Рико"
 
 #. module: base
 #: view:ir.actions.act_window:0
@@ -6806,22 +6806,22 @@ msgstr ""
 #. module: base
 #: field:ir.actions.act_window,filter:0
 msgid "Filter"
-msgstr ""
+msgstr "Сүзгі"
 
 #. module: base
 #: model:res.partner.title,shortcut:base.res_partner_title_madam
 msgid "Ms."
-msgstr ""
+msgstr "миссис"
 
 #. module: base
 #: model:res.country,name:base.ch
 msgid "Switzerland"
-msgstr ""
+msgstr "Швейцария"
 
 #. module: base
 #: model:res.country,name:base.gd
 msgid "Grenada"
-msgstr ""
+msgstr "Гренада"
 
 #. module: base
 #: model:res.country,name:base.wf
@@ -6841,7 +6841,7 @@ msgstr ""
 #. module: base
 #: view:base.language.install:0
 msgid "Load"
-msgstr ""
+msgstr "Жүктеп алу"
 
 #. module: base
 #: help:res.config.users,name:0
@@ -6870,7 +6870,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.so
 msgid "Somalia"
-msgstr ""
+msgstr "Сомали"
 
 #. module: base
 #: selection:publisher_warranty.contract,state:0
@@ -6892,13 +6892,13 @@ msgstr ""
 #: field:res.request,act_to:0
 #: field:res.request.history,act_to:0
 msgid "To"
-msgstr ""
+msgstr "Кімге"
 
 #. module: base
 #: view:ir.cron:0
 #: field:ir.cron,args:0
 msgid "Arguments"
-msgstr ""
+msgstr "Аргументтер"
 
 #. module: base
 #: code:addons/orm.py:716
@@ -6939,7 +6939,7 @@ msgstr ""
 #: field:res.partner.address,is_customer_add:0
 #: model:res.partner.category,name:base.res_partner_category_0
 msgid "Customer"
-msgstr ""
+msgstr "Сатып алу"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -6997,22 +6997,22 @@ msgstr ""
 #: field:res.widget.user,sequence:0
 #: field:wizard.ir.model.menu.create.line,sequence:0
 msgid "Sequence"
-msgstr ""
+msgstr "Тізбек"
 
 #. module: base
 #: model:res.country,name:base.tn
 msgid "Tunisia"
-msgstr ""
+msgstr "Тунис"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_mrp_root
 msgid "Manufacturing"
-msgstr ""
+msgstr "Өндіру"
 
 #. module: base
 #: model:res.country,name:base.km
 msgid "Comoros"
-msgstr ""
+msgstr "Комор ар-ы"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_server_action
