--- a/bin/addons/base/i18n/fr.po
+++ b/bin/addons/base/i18n/fr.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-10-03 20:35+0000\n"
+"PO-Revision-Date: 2011-10-08 10:52+0000\n"
 "Last-Translator: t.o <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-04 05:10+0000\n"
-"X-Generator: Launchpad (build 14071)\n"
+"X-Launchpad-Export-Date: 2011-10-09 05:26+0000\n"
+"X-Generator: Launchpad (build 14110)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -131,7 +131,7 @@ msgid ""
 msgstr ""
 "Le domaine, optionnel, est utilisé pour limiter les valeurs possibles des "
 "champs concernés. Il s'exprime en langage Python sous forme de triplets. Par "
-"exemple : [('color','=',rouge')]"
+"exemple : [('color','=','rouge')]"
 
 #. module: base
 #: field:res.partner,ref:0
@@ -202,7 +202,7 @@ msgstr ""
 #. module: base
 #: field:ir.sequence,number_increment:0
 msgid "Increment Number"
-msgstr "Incrémenter le Numéro"
+msgstr "Incrémenter le numéro"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_res_company_tree
@@ -1661,7 +1661,7 @@ msgid ""
 "do not wish to add more users at this stage, you can always do this later."
 msgstr ""
 "Créez des utilisateurs additionnels et assignez-les à des groupes qui leur "
-"permettra d'avoir accès à des fonctionnalités choisies dans le système. "
+"permettront d'avoir accès à des fonctionnalités choisies dans le système. "
 "Cliquez sur 'Terminé' si vous ne désirez pas ajouter plus d'utilisateurs "
 "pour l'instant, vous pourrez toujours en ajouter plus tard."
 
@@ -2177,7 +2177,7 @@ msgstr "terminer"
 #: selection:ir.ui.view,type:0
 #: selection:wizard.ir.model.menu.create.line,view_type:0
 msgid "Calendar"
-msgstr "Calendrier"
+msgstr "Créer un calendrier"
 
 #. module: base
 #: field:res.partner.address,partner_id:0
@@ -2202,9 +2202,6 @@ msgid ""
 "separated list of valid field names (optionally followed by asc/desc for the "
 "direction)"
 msgstr ""
-"\"order\" spécifié non valide, une \"ordre\" de spécification est une liste "
-"de nom de champs séparé par des virgules (optionnel suivi par le sens "
-"croissant/décroissant)"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_module_module_dependency
