--- a/bin/addons/base/i18n/kk.po
+++ b/bin/addons/base/i18n/kk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-server\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-10-07 08:49+0000\n"
+"PO-Revision-Date: 2011-10-08 14:27+0000\n"
 "Last-Translator: arruah <Unknown>\n"
 "Language-Team: Kazakh <kk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-08 05:42+0000\n"
+"X-Launchpad-Export-Date: 2011-10-09 05:26+0000\n"
 "X-Generator: Launchpad (build 14110)\n"
 
 #. module: base
@@ -7096,7 +7096,7 @@ msgstr ""
 #: field:res.request.link,object:0
 #: field:workflow.triggers,model:0
 msgid "Object"
-msgstr ""
+msgstr "Объект"
 
 #. module: base
 #: code:addons/osv.py:151
@@ -7127,7 +7127,7 @@ msgstr ""
 #. module: base
 #: model:ir.ui.menu,name:base.next_id_10
 msgid "Scheduler"
-msgstr ""
+msgstr "Іс кестесі"
 
 #. module: base
 #: help:ir.cron,numbercall:0
@@ -7158,7 +7158,7 @@ msgstr ""
 #. module: base
 #: model:res.widget,title:base.google_maps_widget
 msgid "Google Maps"
-msgstr ""
+msgstr "Google Maps"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_base_config
@@ -7169,7 +7169,7 @@ msgstr ""
 #: model:ir.ui.menu,name:base.menu_marketing_config_root
 #: view:res.company:0
 msgid "Configuration"
-msgstr ""
+msgstr "Баптау"
 
 #. module: base
 #: model:ir.model,name:base.model_publisher_warranty_contract_wizard
@@ -7210,17 +7210,17 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.tr
 msgid "Turkey"
-msgstr ""
+msgstr "Түркия"
 
 #. module: base
 #: model:res.country,name:base.fk
 msgid "Falkland Islands"
-msgstr ""
+msgstr "Фолкленд (Мальвин) ар-ы"
 
 #. module: base
 #: model:res.country,name:base.lb
 msgid "Lebanon"
-msgstr ""
+msgstr "Ливан"
 
 #. module: base
 #: view:ir.actions.report.xml:0
@@ -7242,7 +7242,7 @@ msgstr ""
 #: field:workflow.instance,state:0
 #: field:workflow.workitem,state:0
 msgid "State"
-msgstr ""
+msgstr "Облыс/Штаты"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -7252,7 +7252,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.no
 msgid "Norway"
-msgstr ""
+msgstr "Норвегия"
 
 #. module: base
 #: view:res.lang:0
@@ -7278,7 +7278,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.kg
 msgid "Kyrgyz Republic (Kyrgyzstan)"
-msgstr ""
+msgstr "Қырғызстан"
 
 #. module: base
 #: selection:res.request,state:0
@@ -7304,7 +7304,7 @@ msgstr ""
 #. module: base
 #: view:ir.attachment:0
 msgid "Created"
-msgstr ""
+msgstr "Құрылған кезі"
 
 #. module: base
 #: help:ir.actions.wizard,multi:0
@@ -7321,7 +7321,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.hm
 msgid "Heard and McDonald Islands"
-msgstr ""
+msgstr "Херд және Макдоналд ар-ы"
 
 #. module: base
 #: field:ir.actions.act_window,view_id:0
@@ -7331,7 +7331,7 @@ msgstr ""
 #. module: base
 #: selection:ir.translation,type:0
 msgid "Selection"
-msgstr ""
+msgstr "Таңдағанды ғана"
 
 #. module: base
 #: field:res.company,rml_header1:0
@@ -7375,7 +7375,7 @@ msgstr ""
 #: view:ir.module.module:0
 #: field:ir.module.module,category_id:0
 msgid "Category"
-msgstr ""
+msgstr "Санат"
 
 #. module: base
 #: view:ir.attachment:0
