--- a/bin/addons/base/i18n/fr.po
+++ b/bin/addons/base/i18n/fr.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-10-08 10:52+0000\n"
+"PO-Revision-Date: 2011-10-09 22:25+0000\n"
 "Last-Translator: t.o <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-09 05:26+0000\n"
-"X-Generator: Launchpad (build 14110)\n"
+"X-Launchpad-Export-Date: 2011-10-10 05:20+0000\n"
+"X-Generator: Launchpad (build 14123)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -3547,12 +3547,13 @@ msgid ""
 "Would your payment have been carried out after this mail was sent, please "
 "consider the present one as void."
 msgstr ""
-"Veuiller noter que les paiements ci dessous sont maintenant dus. Si votre "
-"paiement a été envoyé, nous recevrons rapidement le détail de votre "
-"paiements. Si votre paiement est décallé, merci de nous contacter pour en "
-"discuter.                         \n"
-"Si votre paiement a déjà réglé après que ce courriel soit parti, veuillez ne "
-"pas tenir compte de cet envoi."
+"Veuillez noter que les paiements ci-dessous sont maintenant dus. \n"
+"Si votre règlement nous a été envoyé, merci de nous en préciser rapidement "
+"les modalités.\n"
+"Nous vous invitons à nous contacter au cas où ce retard serait volontaire, "
+"et cela afin de nous en communiquer les motifs.\n"
+"Dans le cas où votre règlement nous parviendrait avant réception de ce "
+"courriel, nous vous demandons de considérer cette relance comme non avenue."
 
 #. module: base
 #: model:res.country,name:base.mx
@@ -8952,7 +8953,7 @@ msgstr "Relation de l'objet"
 #: view:ir.rule:0
 #: view:res.partner:0
 msgid "General"
-msgstr "Générale"
+msgstr "Général"
 
 #. module: base
 #: model:res.country,name:base.uz
