--- a/bin/addons/base/i18n/kk.po
+++ b/bin/addons/base/i18n/kk.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-server\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-10-08 14:27+0000\n"
+"PO-Revision-Date: 2011-10-10 04:57+0000\n"
 "Last-Translator: arruah <Unknown>\n"
 "Language-Team: Kazakh <kk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-09 05:26+0000\n"
-"X-Generator: Launchpad (build 14110)\n"
+"X-Launchpad-Export-Date: 2011-10-10 05:20+0000\n"
+"X-Generator: Launchpad (build 14123)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -7382,23 +7382,23 @@ msgstr "Санат"
 #: selection:ir.attachment,type:0
 #: selection:ir.property,type:0
 msgid "Binary"
-msgstr ""
+msgstr "Екілік"
 
 #. module: base
 #: field:ir.actions.server,sms:0
 #: selection:ir.actions.server,state:0
 msgid "SMS"
-msgstr ""
+msgstr "SMS"
 
 #. module: base
 #: model:res.country,name:base.cr
 msgid "Costa Rica"
-msgstr ""
+msgstr "Коста Рика"
 
 #. module: base
 #: view:workflow.activity:0
 msgid "Conditions"
-msgstr ""
+msgstr "Шарттары"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_partner_other_form
@@ -7435,7 +7435,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.dk
 msgid "Denmark"
-msgstr ""
+msgstr "Дания"
 
 #. module: base
 #: field:res.country,code:0
@@ -7480,12 +7480,12 @@ msgstr ""
 #. module: base
 #: model:res.partner.title,name:base.res_partner_title_madam
 msgid "Madam"
-msgstr ""
+msgstr "Мадам"
 
 #. module: base
 #: model:res.country,name:base.ee
 msgid "Estonia"
-msgstr ""
+msgstr "Эстония"
 
 #. module: base
 #: model:ir.ui.menu,name:base.dashboard
@@ -7501,12 +7501,12 @@ msgstr ""
 #: field:res.config.users,new_password:0
 #: field:res.users,new_password:0
 msgid "Change password"
-msgstr ""
+msgstr "Парольді өзгерту"
 
 #. module: base
 #: model:res.country,name:base.nl
 msgid "Netherlands"
-msgstr ""
+msgstr "Нидерланды"
 
 #. module: base
 #: model:ir.ui.menu,name:base.next_id_4
@@ -7541,12 +7541,12 @@ msgstr ""
 #: model:ir.ui.menu,name:base.menu_emails
 #: model:ir.ui.menu,name:base.menu_mail_gateway
 msgid "Emails"
-msgstr ""
+msgstr "Эл.пошта адрестер"
 
 #. module: base
 #: model:res.country,name:base.cd
 msgid "Congo, The Democratic Republic of the"
-msgstr ""
+msgstr "Конго (КДР)"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -7558,12 +7558,12 @@ msgstr ""
 #: field:res.request,body:0
 #: field:res.request.history,req_id:0
 msgid "Request"
-msgstr ""
+msgstr "Сұрақ"
 
 #. module: base
 #: model:res.country,name:base.jp
 msgid "Japan"
-msgstr ""
+msgstr "Жапония"
 
 #. module: base
 #: field:ir.cron,numbercall:0
@@ -7591,7 +7591,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.gr
 msgid "Greece"
-msgstr ""
+msgstr "Грекия"
 
 #. module: base
 #: field:res.request,trigger_date:0
@@ -7632,7 +7632,7 @@ msgstr ""
 #: view:ir.actions.server:0
 #: selection:ir.actions.server,state:0
 msgid "Trigger"
-msgstr ""
+msgstr "Бастауыш"
 
 #. module: base
 #: model:ir.model,name:base.model_base_module_update
@@ -7643,17 +7643,17 @@ msgstr ""
 #: view:ir.model.fields:0
 #: field:ir.model.fields,translate:0
 msgid "Translate"
-msgstr ""
+msgstr "Жылжыту"
 
 #. module: base
 #: field:res.request.history,body:0
 msgid "Body"
-msgstr ""
+msgstr "Беті"
 
 #. module: base
 #: view:partner.wizard.spam:0
 msgid "Send Email"
-msgstr ""
+msgstr "Эл.пошта жолдау"
 
 #. module: base
 #: field:res.config.users,menu_id:0
@@ -7697,7 +7697,7 @@ msgstr ""
 #. module: base
 #: view:publisher_warranty.contract.wizard:0
 msgid "Register"
-msgstr ""
+msgstr "Тіркелу"
 
 #. module: base
 #: field:res.request,ref_doc2:0
@@ -7712,7 +7712,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.ga
 msgid "Gabon"
-msgstr ""
+msgstr "Габон"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_model_data
@@ -7724,12 +7724,12 @@ msgstr ""
 #: view:ir.rule:0
 #: view:res.groups:0
 msgid "Access Rights"
-msgstr ""
+msgstr "Қатынау құқықтары"
 
 #. module: base
 #: model:res.country,name:base.gl
 msgid "Greenland"
-msgstr ""
+msgstr "Гренландия"
 
 #. module: base
 #: field:res.partner.bank,acc_number:0
@@ -7749,7 +7749,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.cy
 msgid "Cyprus"
-msgstr ""
+msgstr "Кипр"
 
 #. module: base
 #: view:base.module.import:0
@@ -7764,18 +7764,18 @@ msgstr ""
 #: field:partner.wizard.spam,subject:0
 #: field:res.request,name:0
 msgid "Subject"
-msgstr ""
+msgstr "Нысаны"
 
 #. module: base
 #: field:res.request,act_from:0
 #: field:res.request.history,act_from:0
 msgid "From"
-msgstr ""
+msgstr "Кімден"
 
 #. module: base
 #: view:res.users:0
 msgid "Preferences"
-msgstr ""
+msgstr "Баптаулары"
 
 #. module: base
 #: model:res.partner.category,name:base.res_partner_category_consumers0
@@ -7786,7 +7786,7 @@ msgstr ""
 #: view:res.config:0
 #: wizard_button:server.action.create,init,step_1:0
 msgid "Next"
-msgstr ""
+msgstr "Келесі"
 
 #. module: base
 #: help:ir.cron,function:0
@@ -7806,12 +7806,12 @@ msgstr ""
 #. module: base
 #: view:ir.actions.report.xml:0
 msgid "Miscellaneous"
-msgstr ""
+msgstr "Әр түрлі"
 
 #. module: base
 #: model:res.country,name:base.cn
 msgid "China"
-msgstr ""
+msgstr "Қытай"
 
 #. module: base
 #: code:addons/base/res/res_user.py:516
@@ -7824,7 +7824,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.eh
 msgid "Western Sahara"
-msgstr ""
+msgstr "Батыс Сахара"
 
 #. module: base
 #: model:ir.model,name:base.model_workflow
