--- a/bin/addons/base/i18n/kk.po
+++ b/bin/addons/base/i18n/kk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-server\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-10-10 04:57+0000\n"
+"PO-Revision-Date: 2011-10-11 05:29+0000\n"
 "Last-Translator: arruah <Unknown>\n"
 "Language-Team: Kazakh <kk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-10 05:20+0000\n"
+"X-Launchpad-Export-Date: 2011-10-11 05:49+0000\n"
 "X-Generator: Launchpad (build 14123)\n"
 
 #. module: base
@@ -7841,7 +7841,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.id
 msgid "Indonesia"
-msgstr ""
+msgstr "Индонезия"
 
 #. module: base
 #: view:base.update.translations:0
@@ -7861,7 +7861,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.bg
 msgid "Bulgaria"
-msgstr ""
+msgstr "Болгария"
 
 #. module: base
 #: view:publisher_warranty.contract.wizard:0
@@ -7871,12 +7871,12 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.ao
 msgid "Angola"
-msgstr ""
+msgstr "Ангола"
 
 #. module: base
 #: model:res.country,name:base.tf
 msgid "French Southern Territories"
-msgstr ""
+msgstr "Францияның солтүстік аймақтары"
 
 #. module: base
 #: model:ir.model,name:base.model_res_currency
@@ -7886,7 +7886,7 @@ msgstr ""
 #: field:res.currency,name:0
 #: field:res.currency.rate,currency_id:0
 msgid "Currency"
-msgstr ""
+msgstr "Ақша"
 
 #. module: base
 #: field:res.partner.canal,name:0
@@ -7912,12 +7912,12 @@ msgstr ""
 #. module: base
 #: view:res.company:0
 msgid "Landscape"
-msgstr ""
+msgstr "Көлденең"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_administration
 msgid "Administration"
-msgstr ""
+msgstr "Әкімшілік"
 
 #. module: base
 #: view:base.module.update:0
@@ -7927,7 +7927,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.ir
 msgid "Iran"
-msgstr ""
+msgstr "Иран"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.res_widget_user_act_window
@@ -7945,12 +7945,12 @@ msgstr ""
 #: field:ir.ui.menu,icon_pict:0
 #: field:publisher_warranty.contract.wizard,state:0
 msgid "unknown"
-msgstr ""
+msgstr "беймәлім"
 
 #. module: base
 #: field:res.currency,symbol:0
 msgid "Symbol"
-msgstr ""
+msgstr "Белгісі"
 
 #. module: base
 #: help:res.config.users,login:0
@@ -7971,29 +7971,29 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.ki
 msgid "Kiribati"
-msgstr ""
+msgstr "Кирибати"
 
 #. module: base
 #: model:res.country,name:base.iq
 msgid "Iraq"
-msgstr ""
+msgstr "Ирак"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_association
 msgid "Association"
-msgstr ""
+msgstr "Байланыс"
 
 #. module: base
 #: model:res.country,name:base.cl
 msgid "Chile"
-msgstr ""
+msgstr "Чили"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_address_book
 #: model:ir.ui.menu,name:base.menu_config_address_book
 #: model:ir.ui.menu,name:base.menu_procurement_management_supplier
 msgid "Address Book"
-msgstr ""
+msgstr "Адрестік кітапша"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_sequence_type
@@ -8034,7 +8034,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.dj
 msgid "Djibouti"
-msgstr ""
+msgstr "Джибути"
 
 #. module: base
 #: field:ir.translation,value:0
@@ -8044,7 +8044,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.ag
 msgid "Antigua and Barbuda"
-msgstr ""
+msgstr "Антигуа және Барбуда"
 
 #. module: base
 #: code:addons/orm.py:3166
@@ -8057,7 +8057,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.zr
 msgid "Zaire"
-msgstr ""
+msgstr "Заир"
 
 #. module: base
 #: field:ir.model.data,res_id:0
@@ -8071,7 +8071,7 @@ msgstr ""
 #: view:ir.cron:0
 #: field:ir.model,info:0
 msgid "Information"
-msgstr ""
+msgstr "Ақпарат"
 
 #. module: base
 #: view:res.widget.user:0
@@ -8086,12 +8086,12 @@ msgstr ""
 #. module: base
 #: selection:res.partner.address,type:0
 msgid "Other"
-msgstr ""
+msgstr "Басқа"
 
 #. module: base
 #: view:res.request:0
 msgid "Reply"
-msgstr ""
+msgstr "Жауап беру"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -8104,12 +8104,12 @@ msgstr ""
 #: view:workflow:0
 #: field:workflow,activities:0
 msgid "Activities"
-msgstr ""
+msgstr "Істер"
 
 #. module: base
 #: field:ir.actions.act_window,auto_refresh:0
 msgid "Auto-Refresh"
-msgstr ""
+msgstr "Автожаңарту"
 
 #. module: base
 #: code:addons/base/ir/ir_model.py:62
@@ -8151,22 +8151,22 @@ msgstr ""
 #: model:ir.ui.menu,name:base.next_id_6
 #: view:workflow.activity:0
 msgid "Actions"
-msgstr ""
+msgstr "Әрекеттер"
 
 #. module: base
 #: selection:res.request,priority:0
 msgid "High"
-msgstr ""
+msgstr "Жоғары"
 
 #. module: base
 #: field:ir.exports.line,export_id:0
 msgid "Export"
-msgstr ""
+msgstr "Экспорт"
 
 #. module: base
 #: model:res.country,name:base.hr
 msgid "Croatia"
-msgstr ""
+msgstr "Хорватия"
 
 #. module: base
 #: help:res.bank,bic:0
@@ -8176,7 +8176,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.tm
 msgid "Turkmenistan"
-msgstr ""
+msgstr "Түрікменстан"
 
 #. module: base
 #: code:addons/base/ir/ir_actions.py:597
@@ -8208,12 +8208,12 @@ msgstr ""
 #: code:addons/orm.py:3199
 #, python-format
 msgid "Error"
-msgstr ""
+msgstr "Қате"
 
 #. module: base
 #: model:res.country,name:base.pm
 msgid "Saint Pierre and Miquelon"
-msgstr ""
+msgstr "Сен-Пьер және Микелон"
 
 #. module: base
 #: help:ir.actions.report.xml,header:0
@@ -8229,7 +8229,7 @@ msgstr ""
 #: view:base.module.update:0
 #: view:base.update.translations:0
 msgid "Update"
-msgstr ""
+msgstr "Жаңарту"
 
 #. module: base
 #: model:ir.actions.report.xml,name:base.ir_module_reference_print
@@ -8239,7 +8239,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.tz
 msgid "Tanzania"
-msgstr ""
+msgstr "Танзания"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -8254,7 +8254,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.cx
 msgid "Christmas Island"
-msgstr ""
+msgstr "Милад аралы"
 
 #. module: base
 #: view:ir.actions.server:0
@@ -8272,7 +8272,7 @@ msgstr ""
 #: model:ir.ui.menu,name:base.menu_res_partner_canal-act
 #: view:res.partner.canal:0
 msgid "Channels"
-msgstr ""
+msgstr "Арналары"
 
 #. module: base
 #: view:ir.ui.view:0
@@ -8309,7 +8309,7 @@ msgstr ""
 #. module: base
 #: view:res.request:0
 msgid "Send"
-msgstr ""
+msgstr "Жіберу"
 
 #. module: base
 #: field:res.config.users,menu_tips:0
@@ -8320,7 +8320,7 @@ msgstr ""
 #. module: base
 #: field:ir.translation,src:0
 msgid "Source"
-msgstr ""
+msgstr "Көзі"
 
 #. module: base
 #: help:res.partner.address,partner_id:0
@@ -8330,7 +8330,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.vu
 msgid "Vanuatu"
-msgstr ""
+msgstr "Вануату"
 
 #. module: base
 #: view:res.company:0
@@ -8370,7 +8370,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.do
 msgid "Dominican Republic"
-msgstr ""
+msgstr "Доминикан Республикасы"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -8388,7 +8388,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.sa
 msgid "Saudi Arabia"
-msgstr ""
+msgstr "Сауд Арабиясы"
 
 #. module: base
 #: help:res.partner,supplier:0
@@ -8442,12 +8442,12 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.gn
 msgid "Guinea"
-msgstr ""
+msgstr "Гвинея"
 
 #. module: base
 #: model:res.country,name:base.lu
 msgid "Luxembourg"
-msgstr ""
+msgstr "Люксембург"
 
 #. module: base
 #: help:ir.values,key2:0
