--- a/bin/addons/base/i18n/fr.po
+++ b/bin/addons/base/i18n/fr.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-10-09 22:25+0000\n"
+"PO-Revision-Date: 2011-10-11 19:53+0000\n"
 "Last-Translator: t.o <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-10 05:20+0000\n"
-"X-Generator: Launchpad (build 14123)\n"
+"X-Launchpad-Export-Date: 2011-10-12 04:54+0000\n"
+"X-Generator: Launchpad (build 14124)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -8315,7 +8315,8 @@ msgstr "Administration"
 #. module: base
 #: view:base.module.update:0
 msgid "Click on Update below to start the process..."
-msgstr "Cliquer sur Mise à Jour afin de lancer l'opération..."
+msgstr ""
+"Cliquer sur le bouton Mettre à jour ci-dessous afin de lancer l'opération..."
 
 #. module: base
 #: model:res.country,name:base.ir
