--- a/bin/addons/base/i18n/kk.po
+++ b/bin/addons/base/i18n/kk.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-server\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-10-11 05:29+0000\n"
+"PO-Revision-Date: 2011-10-11 09:50+0000\n"
 "Last-Translator: arruah <Unknown>\n"
 "Language-Team: Kazakh <kk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-11 05:49+0000\n"
-"X-Generator: Launchpad (build 14123)\n"
+"X-Launchpad-Export-Date: 2011-10-12 04:55+0000\n"
+"X-Generator: Launchpad (build 14124)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -8484,14 +8484,14 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.sv
 msgid "El Salvador"
-msgstr ""
+msgstr "Сальвадор"
 
 #. module: base
 #: field:res.bank,phone:0
 #: field:res.partner,phone:0
 #: field:res.partner.address,phone:0
 msgid "Phone"
-msgstr ""
+msgstr "Телефондау"
 
 #. module: base
 #: field:ir.cron,active:0
@@ -8509,12 +8509,12 @@ msgstr ""
 #: view:workflow.instance:0
 #: view:workflow.workitem:0
 msgid "Active"
-msgstr ""
+msgstr "Белсенді"
 
 #. module: base
 #: model:res.country,name:base.th
 msgid "Thailand"
-msgstr ""
+msgstr "Тайланд"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_crm_config_lead
@@ -8535,7 +8535,7 @@ msgstr ""
 #: selection:workflow.activity,join_mode:0
 #: selection:workflow.activity,split_mode:0
 msgid "And"
-msgstr ""
+msgstr "Және"
 
 #. module: base
 #: field:ir.model.fields,relation:0
@@ -8546,12 +8546,12 @@ msgstr ""
 #: view:ir.rule:0
 #: view:res.partner:0
 msgid "General"
-msgstr ""
+msgstr "Жалпы"
 
 #. module: base
 #: model:res.country,name:base.uz
 msgid "Uzbekistan"
-msgstr ""
+msgstr "Өзбекстан"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_actions_act_window
@@ -8572,7 +8572,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.tw
 msgid "Taiwan"
-msgstr ""
+msgstr "Тайвань ар."
 
 #. module: base
 #: model:ir.model,name:base.model_res_currency_rate
@@ -8635,7 +8635,7 @@ msgstr ""
 #: view:ir.property:0
 #: field:ir.property,res_id:0
 msgid "Resource"
-msgstr ""
+msgstr "Ресурс"
 
 #. module: base
 #: field:ir.ui.menu,web_icon:0
@@ -8682,18 +8682,18 @@ msgstr ""
 #: field:base.language.export,name:0
 #: field:ir.attachment,datas_fname:0
 msgid "Filename"
-msgstr ""
+msgstr "Файл атауы"
 
 #. module: base
 #: field:ir.model,access_ids:0
 #: view:ir.model.access:0
 msgid "Access"
-msgstr ""
+msgstr "Құқықтары"
 
 #. module: base
 #: model:res.country,name:base.sk
 msgid "Slovak Republic"
-msgstr ""
+msgstr "Словакия Республикасы"
 
 #. module: base
 #: model:ir.ui.menu,name:base.publisher_warranty
@@ -8703,22 +8703,22 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.aw
 msgid "Aruba"
-msgstr ""
+msgstr "Аруба"
 
 #. module: base
 #: model:res.country,name:base.ar
 msgid "Argentina"
-msgstr ""
+msgstr "Аргентина"
 
 #. module: base
 #: field:res.groups,name:0
 msgid "Group Name"
-msgstr ""
+msgstr "Топ атауы"
 
 #. module: base
 #: model:res.country,name:base.bh
 msgid "Bahrain"
-msgstr ""
+msgstr "Бахрейн"
 
 #. module: base
 #: model:res.partner.category,name:base.res_partner_category_12
@@ -8740,7 +8740,7 @@ msgstr ""
 #: view:res.users:0
 #: field:res.users,company_id:0
 msgid "Company"
-msgstr ""
+msgstr "Компания"
 
 #. module: base
 #: view:res.users:0
@@ -8765,12 +8765,12 @@ msgstr ""
 #. module: base
 #: view:ir.actions.todo:0
 msgid "Launch"
-msgstr ""
+msgstr "Ашу"
 
 #. module: base
 #: field:ir.actions.act_window,limit:0
 msgid "Limit"
-msgstr ""
+msgstr "Шегі"
 
 #. module: base
 #: help:ir.actions.server,wkf_model_id:0
@@ -8780,7 +8780,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.jm
 msgid "Jamaica"
-msgstr ""
+msgstr "Ямайка"
 
 #. module: base
 #: model:ir.actions.act_window,help:base.action_partner_category_form
@@ -8794,13 +8794,13 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.az
 msgid "Azerbaijan"
-msgstr ""
+msgstr "Әзірбайжан"
 
 #. module: base
 #: code:addons/base/res/partner/partner.py:250
 #, python-format
 msgid "Warning"
-msgstr ""
+msgstr "Ескерту"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -8816,7 +8816,7 @@ msgstr ""
 #: view:ir.property:0
 #: model:ir.ui.menu,name:base.next_id_15
 msgid "Parameters"
-msgstr ""
+msgstr "Параметрлер"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -8840,7 +8840,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.rw
 msgid "Rwanda"
-msgstr ""
+msgstr "Руанда"
 
 #. module: base
 #: view:ir.sequence:0
@@ -8850,7 +8850,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.ck
 msgid "Cook Islands"
-msgstr ""
+msgstr "Кук ар-ы"
 
 #. module: base
 #: field:ir.model.data,noupdate:0
@@ -8865,12 +8865,12 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.sg
 msgid "Singapore"
-msgstr ""
+msgstr "Сингапур"
 
 #. module: base
 #: selection:ir.actions.act_window,target:0
 msgid "Current Window"
-msgstr ""
+msgstr "Назардағы терезе"
 
 #. module: base
 #: view:ir.values:0
@@ -8895,7 +8895,7 @@ msgstr ""
 #: field:res.partner.address,country_id:0
 #: field:res.partner.bank,country_id:0
 msgid "Country"
-msgstr ""
+msgstr "Кантри"
 
 #. module: base
 #: field:ir.model.fields,complete_name:0
@@ -8928,7 +8928,7 @@ msgstr ""
 #. module: base
 #: view:ir.actions.act_window:0
 msgid "Select Groups"
-msgstr ""
+msgstr "Топтарды таңдау"
 
 #. module: base
 #: view:res.lang:0
@@ -8952,7 +8952,7 @@ msgstr ""
 #. module: base
 #: view:res.company:0
 msgid "Portrait"
-msgstr ""
+msgstr "Тік"
 
 #. module: base
 #: code:addons/base/ir/ir_model.py:317
@@ -8975,7 +8975,7 @@ msgstr ""
 #: selection:ir.ui.view,type:0
 #: selection:wizard.ir.model.menu.create.line,view_type:0
 msgid "Graph"
-msgstr ""
+msgstr "График"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_actions_server
@@ -9027,13 +9027,13 @@ msgstr ""
 #. module: base
 #: view:ir.cron:0
 msgid "Execution"
-msgstr ""
+msgstr "Орындау"
 
 #. module: base
 #: field:ir.actions.server,condition:0
 #: field:workflow.transition,condition:0
 msgid "Condition"
-msgstr ""
+msgstr "Шарты"
 
 #. module: base
 #: help:ir.values,model_id:0
@@ -9099,7 +9099,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.sc
 msgid "Seychelles"
-msgstr ""
+msgstr "Сейшел ар-ы"
 
 #. module: base
 #: model:ir.model,name:base.model_res_partner_bank
@@ -9110,18 +9110,18 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.sl
 msgid "Sierra Leone"
-msgstr ""
+msgstr "Съера-Леоне"
 
 #. module: base
 #: view:res.company:0
 #: view:res.partner:0
 msgid "General Information"
-msgstr ""
+msgstr "Жалпы мәліметі"
 
 #. module: base
 #: model:res.country,name:base.tc
 msgid "Turks and Caicos Islands"
-msgstr ""
+msgstr "Теркс және Кайкос ар-ы"
 
 #. module: base
 #: field:res.partner.bank,owner_name:0
@@ -9155,7 +9155,7 @@ msgstr ""
 #: field:res.partner.address,function:0
 #: selection:workflow.activity,kind:0
 msgid "Function"
-msgstr ""
+msgstr "Функция"
 
 #. module: base
 #: view:res.widget:0
@@ -9165,7 +9165,7 @@ msgstr ""
 #. module: base
 #: selection:ir.actions.todo,restart:0
 msgid "Never"
-msgstr ""
+msgstr "Ешқашан"
 
 #. module: base
 #: selection:res.partner.address,type:0
@@ -9181,7 +9181,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.gw
 msgid "Guinea Bissau"
-msgstr ""
+msgstr "Гвинея-Биссау"
 
 #. module: base
 #: view:workflow.instance:0
@@ -9197,7 +9197,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.kp
 msgid "North Korea"
-msgstr ""
+msgstr "Солтүстік Корея"
 
 #. module: base
 #: selection:ir.actions.server,state:0
@@ -9208,7 +9208,7 @@ msgstr ""
 #: view:ir.filters:0
 #: field:res.log,context:0
 msgid "Context"
-msgstr ""
+msgstr "Контексті"
 
 #. module: base
 #: field:res.bank,bic:0
@@ -9240,7 +9240,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.lk
 msgid "Sri Lanka"
-msgstr ""
+msgstr "Шри-Ланка"
 
 #. module: base
 #: selection:base.language.install,lang:0
