--- a/bin/addons/base/i18n/da.po
+++ b/bin/addons/base/i18n/da.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-09-29 05:09+0000\n"
-"Last-Translator: John Mertens Pallesen <Unknown>\n"
+"PO-Revision-Date: 2011-11-11 09:59+0000\n"
+"Last-Translator: OpenERP Danmark / Mikhael Saxtorph <Unknown>\n"
 "Language-Team: Danish <da@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-11-01 05:15+0000\n"
-"X-Generator: Launchpad (build 14197)\n"
+"X-Launchpad-Export-Date: 2011-11-12 05:14+0000\n"
+"X-Generator: Launchpad (build 14277)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -29,12 +29,12 @@ msgstr "Domæne"
 #. module: base
 #: model:res.country,name:base.sh
 msgid "Saint Helena"
-msgstr "Sankt Helena"
+msgstr "St. Helena"
 
 #. module: base
 #: view:ir.actions.report.xml:0
 msgid "Other Configuration"
-msgstr ""
+msgstr "Andre indstillinger"
 
 #. module: base
 #: selection:ir.property,type:0
@@ -64,7 +64,7 @@ msgstr "Vis arkitektur"
 #. module: base
 #: field:base.language.import,code:0
 msgid "Code (eg:en__US)"
-msgstr ""
+msgstr "Kode (f.eks.: en_US)"
 
 #. module: base
 #: view:workflow:0
@@ -79,32 +79,32 @@ msgstr "Arbejdsgang"
 #. module: base
 #: view:partner.sms.send:0
 msgid "SMS - Gateway: clickatell"
-msgstr ""
+msgstr "SMS-gateway: clickatell"
 
 #. module: base
 #: selection:base.language.install,lang:0
 msgid "Hungarian / Magyar"
-msgstr ""
+msgstr "Ungarsk / Magyar"
 
 #. module: base
 #: selection:ir.model.fields,select_level:0
 msgid "Not Searchable"
-msgstr ""
+msgstr "Ikke søgbar"
 
 #. module: base
 #: selection:base.language.install,lang:0
 msgid "Spanish (VE) / Español (VE)"
-msgstr ""
+msgstr "Spansk (VE) / Español (VE)"
 
 #. module: base
 #: field:ir.actions.server,wkf_model_id:0
 msgid "Workflow On"
-msgstr ""
+msgstr "Arbejdsgang aktiv"
 
 #. module: base
 #: field:ir.actions.act_window,display_menu_tip:0
 msgid "Display Menu Tips"
-msgstr ""
+msgstr "Vis menutips"
 
 #. module: base
 #: view:ir.module.module:0
@@ -130,7 +130,7 @@ msgstr ""
 #. module: base
 #: field:res.partner,ref:0
 msgid "Reference"
-msgstr ""
+msgstr "Reference"
 
 #. module: base
 #: field:ir.actions.act_window,target:0
@@ -160,7 +160,7 @@ msgstr ""
 #. module: base
 #: model:ir.model,name:base.model_ir_ui_view_custom
 msgid "ir.ui.view.custom"
-msgstr ""
+msgstr "ir.ui.view.custom"
 
 #. module: base
 #: model:res.country,name:base.sz
@@ -177,7 +177,7 @@ msgstr ""
 #. module: base
 #: model:res.partner.category,name:base.res_partner_category_woodsuppliers0
 msgid "Wood Suppliers"
-msgstr ""
+msgstr "Træleverandører"
 
 #. module: base
 #: code:addons/base/module/module.py:303
@@ -190,7 +190,7 @@ msgstr ""
 #. module: base
 #: field:ir.sequence,number_increment:0
 msgid "Increment Number"
-msgstr ""
+msgstr "Nr. stiger med"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_res_company_tree
@@ -206,7 +206,7 @@ msgstr ""
 #. module: base
 #: view:res.partner:0
 msgid "Search Partner"
-msgstr ""
+msgstr "Søg kontakt"
 
 #. module: base
 #: code:addons/base/res/res_user.py:132
@@ -223,7 +223,7 @@ msgstr "ny"
 #. module: base
 #: field:ir.actions.report.xml,multi:0
 msgid "On multiple doc."
-msgstr ""
+msgstr "På flere dokumenter"
 
 #. module: base
 #: field:ir.module.category,module_nr:0
