--- a/bin/addons/base/i18n/ar.po
+++ b/bin/addons/base/i18n/ar.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-11-17 00:24+0000\n"
+"PO-Revision-Date: 2011-11-21 12:17+0000\n"
 "Last-Translator: kifcaliph <kifcaliph@hotmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-11-18 05:38+0000\n"
+"X-Launchpad-Export-Date: 2011-11-22 05:21+0000\n"
 "X-Generator: Launchpad (build 14299)\n"
 
 #. module: base
@@ -136,7 +136,7 @@ msgstr "المرجع"
 #. module: base
 #: field:ir.actions.act_window,target:0
 msgid "Target Window"
-msgstr "نافذة الهدف"
+msgstr "النافذة الهدف"
 
 #. module: base
 #: code:addons/base/res/res_user.py:507
@@ -161,7 +161,7 @@ msgstr "خطأ تقييد"
 #. module: base
 #: model:ir.model,name:base.model_ir_ui_view_custom
 msgid "ir.ui.view.custom"
-msgstr ""
+msgstr "ir.ui.view.custom"
 
 #. module: base
 #: model:res.country,name:base.sz
@@ -307,7 +307,7 @@ msgstr "خطوات إعداد المعالج"
 #. module: base
 #: model:ir.model,name:base.model_ir_ui_view_sc
 msgid "ir.ui.view_sc"
-msgstr ""
+msgstr "ir.ui.view_sc"
 
 #. module: base
 #: field:res.widget.user,widget_id:0
@@ -338,7 +338,7 @@ msgstr "اختر نوع الإجراء"
 #. module: base
 #: model:res.country,name:base.tv
 msgid "Tuvalu"
-msgstr ""
+msgstr "توفالو"
 
 #. module: base
 #: selection:ir.model,state:0
@@ -482,7 +482,7 @@ msgstr "مورّدون متنوعون"
 #: code:addons/base/ir/ir_model.py:255
 #, python-format
 msgid "Custom fields must have a name that starts with 'x_' !"
-msgstr ""
+msgstr "الحقول الخاصة يجب أن تيدأ باسم يبدأ بـ 'x_' !"
 
 #. module: base
 #: help:ir.actions.server,action_id:0
@@ -720,7 +720,7 @@ msgstr "أيام العمل"
 #. module: base
 #: selection:ir.module.module,license:0
 msgid "Other OSI Approved Licence"
-msgstr "رخص أخرى تعترف بها \"مبادرة المصدر المفتوح\" (OSI)"
+msgstr "رخص أخرى تعترف بها الـ (OSI)"
 
 #. module: base
 #: help:res.config.users,context_lang:0
@@ -777,7 +777,7 @@ msgstr "ir.config_parameter"
 #. module: base
 #: selection:base.language.export,format:0
 msgid "TGZ Archive"
-msgstr ""
+msgstr "ملف TGZ"
 
 #. module: base
 #: view:res.lang:0
